serd (0.32.5) unstable; urgency=medium

  * Fix handling of some invalid EOF cases in lax mode
  * Fix invalid characters in error messages
  * Remove project and version number from man page OS field

 -- David Robillard <d@drobilla.net>  Thu, 30 Jan 2025 20:28:00 +0000

serd (0.32.4) stable; urgency=medium

  * Clean up enum declarations
  * Fix library current_version on MacOS
  * Fix overly permissive parsing of syntax names on the command line
  * Fix parsing NQuads lines with no space before the final dot
  * Fix reading chunks from files without trailing newlines
  * Fix rewriting special literals when datatype URIs are prefixed names
  * Gracefully handle errors while writing the end of anonymous nodes
  * Improve test suite coverage
  * Simplify some character classification and comparison code
  * Support reading lone lists in lax mode
  * Treat out of range unicode characters as errors
  * Write blank lines between graphs and statements in TriG

 -- David Robillard <d@drobilla.net>  Sun, 19 Jan 2025 00:17:58 +0000

serd (0.32.2) stable; urgency=medium

  * Enable clang nullability checks
  * Fix writing empty list objects within blank nodes

 -- David Robillard <d@drobilla.net>  Tue, 23 Jan 2024 19:32:21 +0000

serd (0.32.0) stable; urgency=medium

  * Add Windows path separator support to serd_node_new_file_uri()
  * Add long "help" and "version" options to serdi
  * Add options to disable html or singlehtml documentation
  * Add serd_reader_skip_until_byte() to public API
  * Allow SERD_API to be defined by the user
  * Avoid creating test files in the current directory
  * Avoid using ASCII grave as a quote
  * Check for POSIX features with the build system
  * Clean up and improve test suite
  * Clean up code
  * Fix crash when trying to read chunks without starting
  * Fix hang when skipping an error at EOF when lax parsing
  * Fix incorrect parsing of strange quote escape patterns
  * Fix possible hang when writing nested Turtle lists