@@ -2,9 +2,10 @@ serd (0.32.5) unstable; urgency=medium
 
   * Fix handling of some invalid EOF cases in lax mode
   * Fix invalid characters in error messages
+  * Refuse to write incoherent statements
   * Remove project and version number from man page OS field
 
- -- David Robillard <d@drobilla.net>  Thu, 30 Jan 2025 20:28:00 +0000
+ -- David Robillard <d@drobilla.net>  Tue, 25 Feb 2025 14:22:43 +0000
 
 serd (0.32.4) stable; urgency=medium
 
